gitops/01-system/main/argo-workflows/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows-route
  namespace: argo-workflows
spec:
  parentRefs:
  - name: management-gateway
    namespace: istio-system
  hostnames:
  - "workflows.jin-server.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-workflows-server
      port: 2746 # Argo Workflows dashboard port
